scripts/Components/styles/home.css
@import url('https://fonts.googleapis.com/css?family=Aclonica');
@import url('https://fonts.googleapis.com/css?family=Amethysta');
@import url('https://fonts.googleapis.com/css?family=Lora:400,700|Montserrat:300');

body {
	background-color: white;
	margin: 0;
}

.rectangle-red {
    background-color: #C96567
}

.rectangle-blue {
	background-color: #97AABD;
}

.rectangle-white{
    background-color: white;
}

.heading {
	width: 365px;
	height: 102px;
	color: white;
	font-family: "Aclonica";
	font-weight: 400;
	font-size: 60px;
	text-align: left;
	padding-top: 1em;
	padding-left: 1em;
}

.topnav {
  background-color: #314455;
  overflow: hidden;
  position: -webkit-sticky; 
  position: fixed;
  top: 0;
  width: 100%;
}

/* Style the links inside the navigation bar */
.topnav a {
  float: left;
  color: white;
  font-family: 'Montserrat', sans-serif;
  font-weight: 300;
  text-transform: uppercase;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 25px;
}

.login-page {
	margin: 7px;
	float: right;
}

.topnav p {
	float: right;
	color: white;
	font-family: 'Montserrat', sans-serif;
	font-weight: 300;
	text-align: center;
	padding: 14px 16px;
	text-decoration: none;
	font-size: 25px;
	margin: 0;
}

/* Change the color of links on hover */
.topnav a:hover {
  background-color: #644E5B;
  color: white;
}

.slogan {
	height: 100px;
	color: white;
	font-family: 'Montserrat', sans-serif;
	font-weight: 300;
	text-transform: uppercase;
	font-size: 40px;
	letter-spacing: 2px;
	text-align: center;
	padding: 1.5%;
}

.message {
	text-align: center;
}

.slogan-description {
	height: 87px;
	color: white;
	font-family: 'Lora', serif;
	font-size: 13px;
	text-align: center;
}

.slogan-black {
	height: 100px;
	color: black;
	font-family: 'Montserrat', sans-serif;
	font-weight: 300;
	text-transform: uppercase;
	font-size: 40px;
	letter-spacing: 2px;
	text-align: center;
	margin-top: 10px;
}
.slogan-description-black {
	height: 87px;
	color: black;
	font-family: 'Lora', serif;
	font-size: 13px;
	text-align: center;
}

.horizontal-line {
	width: 100%;
	height: 0px;
	border-color: #7a7a7a;
	border-width: 1px;
	border-style: solid;
}

.section-1 {
	width: 57px;
	height: 29px;
	color: black;
	font-family: 'Montserrat', sans-serif;
	font-weight: 600;
	text-transform: uppercase;
	font-size: 25px;
	letter-spacing: 1px;
	text-align: left;
	padding-left: 1em;
}
.section-1-description {
	width: 100px;
	height: 130px;
	color: black;
	font-family: 'Lora', serif;
	font-size: 14px;
	text-align: left;
	padding-left: 3em;
}

.center {
	position: absolute;
	top: 50%;
	left: 50%;
	-ms-transform: translate(-50%, -50%);
	transform: translate(-50%, -50%);
}

.feedback-button button {
	display: inline-block;
	padding: 0.35em 1.2em;
	border: 0.1em solid #314455;
	margin: 0 0.3em 0.3em 0;
	border-radius: 0.12em;
	box-sizing: border-box;
	text-decoration: none;
	font-family: 'Montserrat', sans-serif;
	font-weight: 300;
	color: white;
	background-color: #314455;
	text-align: center;
	transition: all 0.2s;
}

.feedback-button button a:hover{
	color: #000000;
	background-color: #FFFFFF;
}

@media all and (max-width:30em) {
	.feedback-button button a {
		display: block;
		margin: 0.4em auto;
	}
}
.name-box {
	padding-left: 25px;
    margin-left: auto;
    margin-right: auto
}

.message-box {
	padding: 25px;
    margin-left: auto;
    margin-right: auto
}

.message-box input {
	min-height: 200px;
}

